--- a/templates/partials/newspace.hbs
+++ b/templates/partials/newspace.hbs
@@ -17,10 +17,10 @@
             <input type="password" class="form-control" id="joinClass2" name="joinPassword">
           </div>
           <div class="form-check mx-2">
-            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault2">
-            <label class="form-check-label" for="flexCheckDefault2">
+            <label class="form-check-label" for="joinClass3">
               Show Password
             </label>
+            <input class="form-check-input" type="checkbox" value="" id="joinClass3">
           </div>
           <div class="p-2">
             <p style="text-align:center">Want to create a new class? <a data-bs-toggle="modal" data-bs-dismiss="modal"
