--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,7 +6,7 @@
 
     {{>navbar}}
     {{>symbols}}
-    
+
     {{#if contactsubmit}}
     <div class="alert alert-success d-flex align-items-center alert-dismissible fade show" role="alert">
         <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:">
@@ -43,7 +43,7 @@
     </div>
     {{/if}}
 
-    
+
     {{#if invalid}}
     <div class="alert alert-danger d-flex align-items-center alert-dismissible fade show" role="alert">
         <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
@@ -61,7 +61,8 @@
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title bg-primary text-light d-inline-block p-2 rounded text-center w-25" id="staticBackdropLabel">Sign In</h5>
+                    <h5 class="modal-title bg-primary text-light d-inline-block p-2 rounded text-center w-25"
+                        id="staticBackdropLabel">Sign In</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -99,7 +100,8 @@
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title bg-primary text-light d-inline-block p-2 rounded text-center w-25" id="staticBackdropLabel">Sign Up</h5>
+                    <h5 class="modal-title bg-primary text-light d-inline-block p-2 rounded text-center w-25"
+                        id="staticBackdropLabel">Sign Up</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -139,7 +141,7 @@
         </div>
     </div>
 
-  
+
 
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
@@ -192,7 +194,17 @@
                 <img src="images/about(1).jpg" class="img-fluid" style="max-width:20rem" alt="...">
             </div>
             <div class="flex-grow-1 my-2 px-2">
-                <p style="text-align:justify">CollegeSpace is the perfect place to assemble all your resources. Whether managing a class or storing your notes, this website provides the perfect interface for it. CollegeSpace uses cookies to keep track of its users, removing the hassle of signing in regularly. Any number of spaces can be created consisting of multiple files. The person creating a class will be the admin by default and later can make other members admin too. Only an admin will be able to edit the class information, while it will be a read-only interface for the other users. The total number of users, along with the admins, will be visible to each class member. The admin will have the option to remove the class in case it is no longer required. However, this will result in the removal of the class altogether, i.e., no admin or member will be able to access it later. If one faces any problem, please submit the contact form below, and the developers will try to fix it as early as possible.</p>
+                <p style="text-align:justify">CollegeSpace is the perfect place to assemble all your resources. Whether
+                    managing a class or storing your notes, this website provides the perfect interface for it.
+                    CollegeSpace uses cookies to keep track of its users, removing the hassle of signing in regularly.
+                    Any number of spaces can be created consisting of multiple files. The person creating a class will
+                    be the admin by default and later can make other members admin too. Only an admin will be able to
+                    edit the class information, while it will be a read-only interface for the other users. The total
+                    number of users, along with the admins, will be visible to each class member. The admin will have
+                    the option to remove the class in case it is no longer required. However, this will result in the
+                    removal of the class altogether, i.e., no admin or member will be able to access it later. If one
+                    faces any problem, please submit the contact form below, and the developers will try to fix it as
+                    early as possible.</p>
             </div>
         </div>
     </div>
@@ -257,11 +269,11 @@
 
 </body>
 
-<script src="index.js"></script>
+<script src=" /index.js"></script>
 
-<script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-                    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-                    crossorigin="anonymous"></script>
+                    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+                        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+                        crossorigin="anonymous"></script>
 
 
                     </html>
