--- a/templates/views/content.hbs
+++ b/templates/views/content.hbs
@@ -225,6 +225,10 @@
                     data-bs-target="#makeAdmin">Change Admin Status</a></button>
             </div>
             <div class="text-center">
+                <button type="button" class="btn btn-primary my-2 w-75 rounded" data-bs-toggle="modal"
+                    data-bs-target="#removeUser">Remove User</a></button>
+            </div>
+            <div class="text-center">
                 <button type="button" class="btn btn-danger my-2 w-75 rounded" data-bs-toggle="modal"
                     data-bs-target="#removeClass">Remove Class</a></button>
             </div>
@@ -295,12 +299,40 @@
                 <div class="modal-body">
                     <form class="row g-3" action="/removeAdmin/{{uid}}" method="POST">
                         <div class="col-12">
-                            <label for="removeAdmin1" class="form-label">Email :</label>
-                            <input type="email" class="form-control" id="removeAdmin1" rows="2" name="email"
+                            <label for="removeUser1" class="form-label">Email :</label>
+                            <input type="email" class="form-control" id="removeUser1" rows="2" name="email"
                                 placeholder="Email who needs to be removed from the post of admin"></input>
                         </div>
                         <p class="text-center">To make a user admin <a data-bs-toggle="modal" data-bs-dismiss="modal"
                                 href="#makeAdmin">Click Here</a></p>
+                        <div class="modal-footer d-flex justify-content-center mx-auto w-100">
+                            <button type="submit" class="btn btn-primary w-50">Remove</button>
+                        </div>
+                    </form>
+                </div>
+                {{!-- <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div> --}}
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="removeUser" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title bg-primary text-light d-inline-block p-2 rounded" id="removeUserLabel">Remove User</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form class="row g-3" action="/removeUser/{{uid}}" method="POST">
+                        <div class="col-12">
+                            <label for="removeUser1" class="form-label">Email :</label>
+                            <input type="email" class="form-control" id="removeUser1" rows="2" name="email"
+                                placeholder="Email of the user who needs to be removed"></input>
+                        </div>
+                        {{!-- <p class="text-center">To make a user admin <a data-bs-toggle="modal" data-bs-dismiss="modal"
+                                href="#makeAdmin">Click Here</a></p> --}}
                         <div class="modal-footer d-flex justify-content-center mx-auto w-100">
                             <button type="submit" class="btn btn-primary w-50">Remove</button>
                         </div>
@@ -423,11 +455,12 @@
     {{>newspace}}
 </body>
 
+<script src="/main.js"></script>
+
 <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
 
-{{!--
-<script src="index.js"></script> --}}
+
 
 </html>
