--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -121,7 +121,7 @@
                         </div>
                         <div class="col-12">
                             <label for="inputPassword" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="inputPassword" name="password">
+                            <input type="password" class="form-control" id="inputPassword" name="password" minlength="6">
                         </div>
                         <div class="col-12">
                             <label for="inputCpassword" class="form-label">Confirm Password</label>
